vlib/v/parser/tests/block_syntax_if_warning.vv
fn main() {
	a := 1
	if a > 0
	{
		println('hello, world')
	}
}
